--- a/app_workout_tracker/templates/workout_tracker/home.html
+++ b/app_workout_tracker/templates/workout_tracker/home.html
@@ -1,14 +1,19 @@
 {% extends 'base.html' %}
 {% block content %}
-<h1> {% for topic in public_topics %}
-     <ul>
-         <li>{{topic}}
-             <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='goals_list' %}">Goals</a>
-             <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='progress_list' %}">Progress</a>
-             <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='mistakes_list' %}">Mistake</a>
 
-         </li>
-     </ul>
-    {% endfor %}
-</h1>
+<div> Public Topics:</div>
+    <h1> {% for topic in public_topics %}
+         <ul>
+             <li>
+                 {{topic}}
+                 <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='goals_list' %}">Goals</a>
+                 <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='progress_list' %}">Progress</a>
+                 <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='mistakes_list' %}">Mistake</a>
+
+             </li>
+         </ul>
+        {% endfor %}
+    </h1>
+
+
 {% endblock %}
