--- a/app_workout_tracker/templates/workout_tracker/secure_entry_list.html
+++ b/app_workout_tracker/templates/workout_tracker/secure_entry_list.html
@@ -2,19 +2,18 @@
 
 {% block content %}
 {% if user.is_authenticated %}
+<!--Printing topic_name-->
+<div>Topic name: {{called_submodel.2}}> Topic:id{{called_submodel.3}} > subtopic_list:{{called_submodel.0|title}}> </div>
 
-
-<a><button>Add new entry</button></a>
-  {% for key, submodel in called_submodel.items %}
-
-        {% for value in submodel %}
-          <ul>
-    <li>
-        <a href="{% url 'awt:secure_subtopic_detail' pk=value.id subtopic_name=key %}">  {{value.topic}}||{{value.text}} || {{value}}||{{value.id}}</a>
-           </li>
-</ul>
-        {%endfor%}
-{%endfor%}
+<a href="{% url 'awt:add_subtopic' topic_id=called_submodel.3 subtopic=called_submodel.0 %}"><button>Add new entry</button></a>
+  {% for value in called_submodel.1 %}
+    <ul>
+        <li>
+              <a href="{% url 'awt:secure_subtopic_detail' topic_id=called_submodel.3 subtopic_name=called_submodel.0 subtopic_id=value.id  %}">{{value.topic}}||{{value.text}} || {{value}}||{{value.id}}</a>
+            <a href="{% url 'awt:delete_subtopic' subtopic_id=value.id subtopic_name=called_submodel.0 %}"><button> Delete entry</button></a>
+               </li>
+    </ul>
+  {%endfor%}
 
 
 
