--- a/app_workout_tracker/templates/workout_tracker/secure_home.html
+++ b/app_workout_tracker/templates/workout_tracker/secure_home.html
@@ -3,20 +3,20 @@
 
 {% if user.is_authenticated %}
 <div> {{user|title}}'s Topics:</div>
-     <h1> {% for topic in user_topics %}
+      {% for topic in user_topics %}
          <ul>
              <li>
 
-                 {{topic}}
-                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='goals_list' %}">Goals</a>
-                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='progress_list' %}">Progress</a>
-                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='mistakes_list' %}">Mistake</a>
+                <b> {{topic}}</b>
+                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='goals_list' topic_name=topic %}">Goals</a>
+                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='progress_list' topic_name=topic %}">Progress</a>
+                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='mistakes_list' topic_name=topic %}">Mistake</a>
                  <a href="{% url 'awt:delete_topic' topic.id %}"><button type="delete">Delete Topic</button></a>
 
              </li>
          </ul>
         {% endfor %}
-    </h1>
+
 
 
 {% else %}
