--- a/app_workout_tracker/templates/base.html
+++ b/app_workout_tracker/templates/base.html
@@ -1,35 +1,101 @@
+{% load bootstrap5 %}
+
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Welcome to My Workout Tracker </title>
 <!--    Adding Boot strap config-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-ygbV9kiqUc6oa4msXn9868pTtWMgiQaeYH7/t7LECLbyPA2x65Kgf80OJFdroafW" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.4/dist/umd/popper.min.js" integrity="sha384-q2kxQ16AaE6UbzuKqyBE9/u/KzioAlnx2maXQHiDX9d4/zp8Ok3f+M7DPm+Ib6IU" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-pQQkAEnwaBkjpqZ8RU1fF1AKtTcHJwFl3pblpTlHXybJjHpMYo79HY3hIi4NKxyj" crossorigin="anonymous"></script>
+    {% bootstrap_css %}
+    {% bootstrap_javascript %}
+
+
+  <link crossorigin="anonymous" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" rel="stylesheet">
+  <script crossorigin="anonymous" integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+<script crossorigin="anonymous" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"></script>
+<script crossorigin="anonymous" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+
 </head>
+
 <body>
 
-<nav class="navbar "  >
-    <div class="container-fluid">
-        <h1 class="navbar-brand float-start"><b><a href="/">
-            {{My}} Workout tracker</a></b> |||||||| <a href="{{request.META.HTTP_REFERER|escape}}">Back</a>||||
+<nav class="navbar navbar-expand-lg navbar-light bg-light mb-4 border">
+  <a class="navbar-brand" href="{% url 'awt:public_topics_list' %}">
+      <div style="height: 85px">
+     <img  src="{% static 'workout_tracker/logo.png' %}" alt="logo">
+    </div>
+  </a>
 
-            {% if user.is_authenticated %}
-            <a href="{% url 'awt:secure_topics_list' %}">My Topics</a>||<a href="{% url 'awt:add_topic' %}">Add Topics</a>
-            <h3>Welcome {{user.username|title}},</h3><div> You last logged in at {{user.last_login}}</div><div><h4><a href="{% url 'users:logout' %}">Logout</a></h4></div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-            {% else %}
-            <h4>Welcome Guest!- <a href="{% url 'users:register' %}">Register</a>||<a href="{% url 'users:login' %}">Login</a></h4>
-            {% endif %}
-</h1>
+
+  <div class="collapse navbar-collapse" id="navbarCollapse">
+
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item">
+            <a class="nav-link" href="{% url 'awt:public_topics_list' %}">Public listing </a>
+          </li>
+
+          <li class="nav-item">
+            <a class="nav-link" href="{{request.META.HTTP_REFERER|escape}}">Go Back</a>
+          </li>
+        </ul>
+
+
+    <ul class="navbar-nav navbar-right">
+{% if user.is_authenticated %}
+
+          <li class="nav-item ">
+        <p class="nav-link "><b>Welcome, {{user.username|title}}</b></p>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link " href="{% url 'awt:secure_topics_list' %}">My Topics</a>
+      </li>
+        <li class="nav-item">
+        <a class="nav-link " href="{% url 'awt:add_topic' %}">Add Topics</a>
+      </li>
+         <li class="nav-item">
+        <a class="nav-link " href="{% url 'users:logout' %}">Logout</a>
+      </li>
+        </ul>
+        <div style="font-size: 12px" class="nav-link">Last activity:{{user.last_login}}</div>
     </div>
 </nav>
-<div class="container">
-{% block content %}
 
-{% endblock %}
+{% else %}
+        <li class="nav-item">
+        <p class="nav-link "><b>Welcome, Guest</b></p>
+      </li>
+          <li class="nav-item">
+        <a class="nav-link " href="{% url 'users:register' %}">Register</a>
+      </li>
+         <li class="nav-item">
+        <a class="nav-link " href="{% url 'users:login' %}">Sign In</a>
+      </li>
+
+      </ul>
+  </div>
+</nav>
+ {% endif %}
+
+
+
+<div class="container">
+<!--    header-->
+    <div class="page-header">
+        {% block header %}
+        {% endblock header %}
+    </div>
+    {% block content %}
+
+    {% endblock %}
 </div>
+<!--container-->
+
 </body>
 </html>
