--- a/app_workout_tracker/templates/workout_tracker/entry_detail.html
+++ b/app_workout_tracker/templates/workout_tracker/entry_detail.html
@@ -1,12 +1,28 @@
 {% extends 'base.html' %}
 {% block content %}
 
-<div> {{detail.topic}} </div>
-<div>{{detail.summary}} </div>
-<div>{{detail.text}} </div>
-<div>{{detail.date_added}} </div>
-<div>{{detail.topic.owner}}</div>
+<!--<div>Topic:id{{detail.topic.id}} > subtopic_name:{{subtopic_name}} > subtopic:id {{detail.id}}> </div>-->
+<!--Navigation url-->
+<div class="progress" style="height: 20px;">
+
+    <a href="{% url 'awt:public_topics_list' %}"><b>Public Topic List</b></a> &nbsp;>&nbsp;
+    <a href="{% url 'awt:public_subtopic_list' topic_id=detail.topic.id subtopic_name=subtopic_name %}"> <b>{{detail.topic|title}}'s {{subtopic_name|title}}</b></a> &nbsp;>&nbsp; {{detail.summary}}
+
+</div>
 
 
+
+
+
+
+<div class="card text-dark bg-light mb-3 mt-3" >
+    <div class="card-header progress-bar progress-bar bg-success float-start text-start" role="progressbar" style="width: 100%" aria-valuenow="100" aria-valuemin="0" aria-valuemax="100"><h3>{{detail.topic}}</h3></div>
+  <div class="card-body">
+    <h5 class="card-title">{{detail.summary}}</h5>
+    <p class="card-text">{{detail.text}} </p>
+  </div>
+</div>
+<div class="mt-5"> <b>Date posted: </b> &nbsp;{{detail.date_added}} </div>
+<div ><b>Posted by: </b> &nbsp;{{detail.topic.owner|title}}</div>
 
 {% endblock %}
