--- a/app_workout_tracker/templates/workout_tracker/home.html
+++ b/app_workout_tracker/templates/workout_tracker/home.html
@@ -1,18 +1,42 @@
 {% extends 'base.html' %}
+
+{% block header %}
+<div class='jumbotron'>
+<h1>Track your Workout- Progress, Goals, and Mistakes.</h1>
+</div>
+
+{% endblock header %}
+
 {% block content %}
 
-<div> Public Topics:</div>
-     {% for topic in public_topics %}
-         <ul>
-             <li>
-                 <b>{{topic|title}} :</b>
-                 <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='goals_list' %}">Goals</a>
-                 <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='progress_list' %}">Progress</a>
-                 <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='mistakes_list' %}">Mistake</a>
+
+
+<div> <h3>List of Public Topics:</h3></div>
+      {% for topic in public_topics %}
+         <ul class="list-group">
+             <li class="list-group-item ">
+                <div class="fs-5 float-start" >
+              <!--Inserting icon-->
+                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-check" viewBox="0 0 16 16">
+                          <path fill-rule="evenodd" d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                          <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                          <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+                        </svg>
+                <!-- end-->
+                <b> {{topic|title}}  </b>&nbsp;
+                </div>
+
+                 <div class="fs-5 float-end ">
+                <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='goals_list' %}"><button type="button" class="btn btn btn-outline-success btn-lg">Goals</button></a>
+                 <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='progress_list' %}"><button type="button" class="btn btn-outline-info btn-lg">Progress</button></a>
+                 <a href="{% url 'awt:public_subtopic_list' topic_id=topic.id subtopic_name='mistakes_list' %}"><button type="button" class="btn btn-outline-danger btn-lg">Mistakes</button></a>
+                 </div>
+
 
              </li>
+               {% empty %}
+            <li class="list-group-item list-group-item-primary">No Topics yet, login and add topics</li>
          </ul>
-        {% endfor %}
-
+      {% endfor %}
 
 {% endblock %}
