--- a/app_workout_tracker/templates/workout_tracker/secure_entry_list.html
+++ b/app_workout_tracker/templates/workout_tracker/secure_entry_list.html
@@ -3,17 +3,48 @@
 {% block content %}
 {% if user.is_authenticated %}
 <!--Printing topic_name-->
-<div>Topic name: {{called_submodel.2}}> Topic:id{{called_submodel.3}} > subtopic_list:{{called_submodel.0|title}}> </div>
+<!--<div>Topic name: {{called_submodel.2}}> Topic:id{{called_submodel.3}} > subtopic_list:{{called_submodel.0|title}}> </div>-->
 
-<a href="{% url 'awt:add_subtopic' topic_id=called_submodel.3 subtopic=called_submodel.0 %}"><button>Add new entry</button></a>
+<!--Navigation url-->
+<div class="progress" style="height: 20px;">
+    <a href="{% url 'awt:secure_topics_list' %}"><b>{{user.username|title}}'s Topic List</b></a> &nbsp;> &nbsp;  {{called_submodel.2|title}}'s {{called_submodel.0|title}}</div>
+
+
+
+<div class="mt-3 card-header">
+    <b>{{called_submodel.2|title}}'s {{called_submodel.0|title}}</b>
+</div>
+
+
+
+    <div class="mt-3 card-body">
   {% for value in called_submodel.1 %}
-    <ul>
-        <li>
-              <a href="{% url 'awt:secure_subtopic_detail' topic_id=called_submodel.3 subtopic_name=called_submodel.0 subtopic_id=value.id  %}">{{value.topic}}||{{value.text}} || {{value}}||{{value.id}}</a>
-            <a href="{% url 'awt:delete_subtopic' subtopic_id=value.id subtopic_name=called_submodel.0 %}"><button> Delete entry</button></a>
-               </li>
+    <ul class="list-group">
+        <li class="list-group-item list-group-item-light">
+            <div class="float-start">
+<!-- icon-->
+                                <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chat-right-dots" viewBox="0 0 16 16">
+  <path d="M2 1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h9.586a2 2 0 0 1 1.414.586l2 2V2a1 1 0 0 0-1-1H2zm12-1a2 2 0 0 1 2 2v12.793a.5.5 0 0 1-.854.353l-2.853-2.853a1 1 0 0 0-.707-.293H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12z"/>
+  <path d="M5 6a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0zm4 0a1 1 0 1 1-2 0 1 1 0 0 1 2 0z"/>
+</svg>
+<!--icon ends-->
+
+              <a href="{% url 'awt:secure_subtopic_detail' topic_id=called_submodel.3 subtopic_name=called_submodel.0 subtopic_id=value.id  %}"> {{value}} </a>
+            </div>
+            <div class="float-end">
+                <small>added on: {{value.date_added}}</small>
+            <a href="{% url 'awt:delete_subtopic' subtopic_id=value.id subtopic_name=called_submodel.0 %}"><button class="btn btn-danger btn-sm"> Delete entry</button></a>
+            </div>
+        </li>
     </ul>
+
   {%endfor%}
+    </div>
+
+
+<div class="mt-3">
+<a href="{% url 'awt:add_subtopic' topic_id=called_submodel.3 subtopic=called_submodel.0 %}"><button class="btn btn-success">Add new entry</button></a>
+</div>
 
 
 
