--- a/app_workout_tracker/templates/workout_tracker/secure_home.html
+++ b/app_workout_tracker/templates/workout_tracker/secure_home.html
@@ -1,21 +1,53 @@
 {% extends 'base.html' %}
+{% load bootstrap5 %}
+
+{% block header %}
+<div class='jumbotron'>
+<h1>{{user.username|title}}'s workout tracker- Progress, Goals, and Mistakes.</h1>
+</div>
+
+{% endblock header %}
+
+
+
 {% block content %}
 
 {% if user.is_authenticated %}
-<div> {{user|title}}'s Topics:</div>
+<div> <h3>List of your topics:</h3></div>
       {% for topic in user_topics %}
-         <ul>
-             <li>
+         <ul class="list-group">
+             <li class="list-group-item ">
+                <div class="fs-5 float-start" >
+              <!--Inserting icon-->
+                         <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-clipboard-check" viewBox="0 0 16 16">
+                          <path fill-rule="evenodd" d="M10.854 7.146a.5.5 0 0 1 0 .708l-3 3a.5.5 0 0 1-.708 0l-1.5-1.5a.5.5 0 1 1 .708-.708L7.5 9.793l2.646-2.647a.5.5 0 0 1 .708 0z"/>
+                          <path d="M4 1.5H3a2 2 0 0 0-2 2V14a2 2 0 0 0 2 2h10a2 2 0 0 0 2-2V3.5a2 2 0 0 0-2-2h-1v1h1a1 1 0 0 1 1 1V14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1V3.5a1 1 0 0 1 1-1h1v-1z"/>
+                          <path d="M9.5 1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-3a.5.5 0 0 1-.5-.5v-1a.5.5 0 0 1 .5-.5h3zm-3-1A1.5 1.5 0 0 0 5 1.5v1A1.5 1.5 0 0 0 6.5 4h3A1.5 1.5 0 0 0 11 2.5v-1A1.5 1.5 0 0 0 9.5 0h-3z"/>
+                        </svg>
+                <!-- end-->
+                <b> {{topic|title}}  </b>&nbsp;
+                </div>
 
-                <b> {{topic}}</b>
-                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='goals_list' topic_name=topic %}">Goals</a>
-                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='progress_list' topic_name=topic %}">Progress</a>
-                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='mistakes_list' topic_name=topic %}">Mistake</a>
-                 <a href="{% url 'awt:delete_topic' topic.id %}"><button type="delete">Delete Topic</button></a>
+                 <div class="fs-5 float-end ">
+                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='goals_list' topic_name=topic %}"><button type="button" class="btn btn btn-outline-success btn-lg">Goals</button></a>
+                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='progress_list' topic_name=topic %}"><button type="button" class="btn btn-outline-info btn-lg">Progress</button></a>
+                 <a href="{% url 'awt:secure_subtopic_list' topic_id=topic.id subtopic_name='mistakes_list' topic_name=topic %}"><button type="button" class="btn btn-outline-danger btn-lg">Mistakes</button></a>
+
+                 <a href="{% url 'awt:delete_topic' topic.id %}"><button class="btn btn-danger btn-sm" type="delete">Delete Topic</button></a>
+                </div>
 
              </li>
+
+
+            {% empty %}
+             <li class="list-group-item list-group-item-light"> No new topic found: <b></li>
+
          </ul>
+
+
         {% endfor %}
+  </br>
+            <a href="{% url 'awt:add_topic' %}"><button type="submit" class="btn btn-success">Add Topics</button></a>
 
 
 
