--- a/app_workout_tracker/templates/workout_tracker/secure_entry_list.html
+++ b/app_workout_tracker/templates/workout_tracker/secure_entry_list.html
@@ -36,6 +36,14 @@
             <a href="{% url 'awt:delete_subtopic' subtopic_id=value.id subtopic_name=called_submodel.0 %}"><button class="btn btn-danger btn-sm"> Delete entry</button></a>
             </div>
         </li>
+
+        <li class="list-group-item list-group-item-light">
+            {% empty %}
+            There are no entries.
+            </li>
+
+
+
     </ul>
 
   {%endfor%}
