--- a/app_workout_tracker/templates/workout_tracker/home.html
+++ b/app_workout_tracker/templates/workout_tracker/home.html
@@ -11,7 +11,19 @@
 
 
 
-<div> <h3>List of Public Topics:</h3></div>
+<div class="mt-0"> 
+
+<h3>List of Public Topics:</h3>
+{% if user.is_authenticated%}
+ <a class="nav-link " href="{% url 'awt:secure_topics_list' %}"><button type="button" class="btn btn btn-outline-success btn">My Topics</button></a>
+
+{% else %}
+<p>To add your own topics (private or public):  <a href="{% url 'users:login' %}"><button type="button" class="btn btn btn-outline-danger btn">Login</button></a> </p>
+
+{% endif %}
+</div>
+
+
       {% for topic in public_topics %}
          <ul class="list-group">
              <li class="list-group-item ">
